# vktest

./: '  .bash_common  .clang-format  .gitignore  CMakeLists.txt  README.md  clear_cache  compile_shaders  debug  find_vktest_recurse  fmt  gdebug  rd_debug  rd_debug.cap  rd_release  rd_release.cap  regen_cmake  regen_extern  release  remap_ccmds  run
backup/data/shaders/: main.frag  triangle.vert
backup/data/shaders_old/: composite_f.glsl  fragment.glsl  screen_f.glsl  solid_f.glsl  transparent_f.glsl  transparent_v.glsl
data/shaders/: main.frag  main.vert
data/shaders_old/: composite_v.glsl  screen_v.glsl  solid_v.glsl  vertex.glsl
include/: buffer.h  command.h  image.h  my_vulkan.h  pipeline.h  shader.h  sync.h  utils.h  vertex.h
src/: buffer.c  command.c  image.c  main.c  my_vulkan.c  pipeline.c  shader.c  sync.c  vertex.c
